# BACKEND/src/server.js
@@ -66,28 +66,24 @@ app.post('/upload', (req, res) => {
     })
 })
 
-//Children
-app.use('/children', /* authenticateJwt, */ require('./controller/child/child-router'))
+app.use('/children', authenticateJwt,  require('./controller/child/child-router'))
 
-//Employees
-app.use('/employees', /* authenticateJwt,  */require('./controller/employee/employee-router'))
+app.use('/employees', authenticateJwt, require('./controller/employee/employee-router'))
 
-//Groups
-app.use('/groups', /* authenticateJwt, */ require('./controller/group/group-router'))
+app.use('/groups', authenticateJwt, require('./controller/group/group-router'))
 
-//Kindergartens
-app.use('/kindergartens', /* authenticateJwt, */ require('./controller/kindergarten/kindergarten-router'))
+app.use('/kindergartens', authenticateJwt, require('./controller/kindergarten/kindergarten-router'))
 
-//Special classes
-app.use('/specialclasses', /* authenticateJwt, */ require('./controller/specialclass/specialclass-router'))
+app.use('/specialclasses', authenticateJwt, require('./controller/specialclass/specialclass-router'))
 
-//Login
+app.use('/users', authenticateJwt, require('./controller/user/user-router'))
+
 app.use('/login', require('./controller/login/login-router'))
 
-//Swagger
+
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 
-//Home
+
 app.use('/', (req, res) => {
     res.send('api server')
 })
